# uncertainty_id

./: .gitignore  BUG_FIXES_SUMMARY.md  CLUSTER_SETUP_SUMMARY.md  COMPREHENSIVE_EXPERIMENTS_SUMMARY.md  CONTRIBUTING.md  Dockerfile  EXPERIMENTAL_COVERAGE_ANALYSIS.md  EXPERIMENTAL_RESULTS_UPDATE_SUMMARY.md  GITHUB_PUSH_SUMMARY.md  INSTALL.md  LICENSE  Makefile  NAMING_CLEANUP_SUMMARY.md  OPEN_SOURCE_RELEASE_SUMMARY.md  PRE_SUBMISSION_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  README_UPDATE_SUMMARY.md  SWAT_DATASET_INTEGRATION_SUMMARY.md  analyze_cluster_results.py  analyze_comprehensive_results.py  cluster_experiments.py  comprehensive_experiment_results.json  comprehensive_experiments.py  comprehensive_test.py  create_figures.py  create_sample_swat.py  data_preprocessing.py  docker-compose.yml  download_swat_alternative.py  download_swat_dataset.py  evaluation_framework.py  experiment_config.json  experiments.py  extract_real_data_figures.py  final_submission_summary.json  final_validation.py  generate_hyperparameter_sensitivity_figure.py  generate_missing_figures.py  generate_optimized_tables.py  (+18 more)
.github/workflows/: ci.yml
configs/: default.json  default_config.yaml
data/processed/cicids2017/: feature_names.txt  y_test.npy  y_train.npy
data/processed/nsl_kdd/: feature_names.txt  y_test.npy  y_train.npy
data/processed/swat/: X_test.npy  X_train.npy  dataset_info.json  feature_names.txt  y_test.npy  y_train.npy
data/processed/unsw_nb15/: feature_names.txt
docs/: API_REFERENCE.md  DEVELOPMENT_GUIDE.md  EXPERIMENTAL_SETUP.md
examples/: enn_example.py  quick_start.py  train_nsl_kdd.py
experiment_results/: adversarial_robustness_table.tex  baseline_comparison_table.tex  cicids2017_results.json  comprehensive_results.json  convergence_analysis_table.tex  dimension_ablation_table.tex  ensemble_size_ablation_table.tex  hyperparameters_table.tex  paper_integration_guide.md  performance_analysis_table.tex  results_summary.json  unsw_nb15_results.json
paper/: paper.tex  paper_journal.tex  paper_short.tex
real_experiment_results/: all_results.json  cicids2017_results.json  nsl_kdd_results.json  unsw_nb15_results.json
scripts/: download_datasets.sh  run_experiments.py  run_quick_test.sh  verify_processed_data.sh
tables/: adversarial_robustness_table.tex  baseline_comparison_table.tex  convergence_analysis_table.tex  ensemble_size_ablation_table.tex  hyperparameters_table.tex  performance_analysis_table.tex  table3_historical_comparison.tex  table7_icl_performance.tex
tables_optimized/: optimization_details_table.tex  optimized_baseline_comparison_table.tex  performance_summary_table.tex
tests/: __init__.py  test_models.py
trained_models/: model_info.json
uncertainty_ids/: __init__.py
uncertainty_ids/api/: __init__.py  models.py  monitoring.py  server.py
uncertainty_ids/cli/: __init__.py  train.py
uncertainty_ids/data/: __init__.py  datasets.py  loaders.py  preprocessing.py  processed_loader.py  processor.py
uncertainty_ids/evaluation/: __init__.py  evaluator.py  metrics.py  theoretical.py
uncertainty_ids/models/: __init__.py  embedding.py  evidential_neural_network.py  icl.py  transformer.py  uncertainty.py
uncertainty_ids/training/: __init__.py  enn_trainer.py  losses.py  trainer.py
uncertainty_ids/utils/: __init__.py  calibration.py  config.py  plotting_config.py  reproducibility.py  visualization.py
